--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -3,38 +3,26 @@
   margin: 0;
   box-sizing: border-box;
 }
+
 html {
   font-family: "Montserrat", sans-serif;
 }
+
 body {
   background: #eee;
   padding: 0 16px;
 }
 
-header {
-  background-color: #f5ba13;
-  margin: auto -16px;
-  padding: 16px 32px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+/* Login / Register Page */
+.is-error-center {
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: red;
+  display: flex;
 }
 
-header h1 {
-  color: #fff;
-  font-family: "McLaren", cursive;
-  font-weight: 200;
-}
-
-footer {
-  position: absolute;
-  text-align: center;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-}
-
-footer p {
-  color: #ccc;
-}
+/* Note */
 .note {
   background: #fff;
   border-radius: 7px;
@@ -66,7 +54,7 @@ footer p {
   cursor: pointer;
   outline: none;
 }
-
+/* Note new */
 form.create-note {
   position: relative;
   width: 480px;
@@ -99,4 +87,33 @@ form.create-note button {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   outline: none;
+}
+
+
+
+/* Header */
+.navbar {
+  box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.65);
+  z-index: 1000;  
+}
+
+.navbar .logo {
+    font-family: "McLaren", cursive;
+    font-weight: 700;
+    cursor: pointer;
+    color: #fff;
+}
+
+
+/* Footer */
+footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+footer p {
+  color: #ccc;
 }
