Tesing the burger menu

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -14,6 +14,11 @@ body {
 }
 
 /* Login / Register Page */
+
+.login .box {
+  max-width: 25rem;
+}
+
 .is-error-center {
   justify-content: center;
   align-items: center;
