--- a/client-mid/public/styles.css
+++ b/client-mid/public/styles.css
@@ -3,37 +3,39 @@
   margin: 0;
   box-sizing: border-box;
 }
-
 html {
   font-family: "Montserrat", sans-serif;
 }
-
 body {
   background: #eee;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   padding: 0 16px;
 }
 
-/* Login / Register Page */
-
-.login .box, .register .box {
-  max-width: 25rem;
+header {
+  background-color: #f5ba13;
+  margin: auto -16px;
+  padding: 16px 32px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
 
-.login .error, .register .error {
+header h1 {
+  color: #fff;
+  font-family: "McLaren", cursive;
+  font-weight: 200;
+}
+
+footer {
+  position: absolute;
   text-align: center;
-  margin-bottom: 20px;  
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
 
-
-.is-error-center {
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  color: red;
-  display: flex;
+footer p {
+  color: #ccc;
 }
-
-/* Note */
 .note {
   background: #fff;
   border-radius: 7px;
@@ -65,8 +67,8 @@ body {
   cursor: pointer;
   outline: none;
 }
-/* Note new */
-form.create-note {
+
+form.note-add {
   position: relative;
   width: 480px;
   margin: 30px auto 20px auto;
@@ -75,8 +77,8 @@ form.create-note {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
-form.create-note input,
-form.create-note textarea {
+form.note-add input,
+form.note-add textarea {
   width: 100%;
   border: none;
   padding: 4px;
@@ -85,7 +87,7 @@ form.create-note textarea {
   font-family: inherit;
   resize: none;
 }
-form.create-note button {
+form.note-add button {
   position: absolute;
   right: 18px;
   bottom: -18px;
@@ -98,33 +100,4 @@ form.create-note button {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   outline: none;
-}
-
-
-
-/* Header */
-.navbar {
-  box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.65);
-  z-index: 1000;  
-}
-
-.navbar .logo {
-    font-family: "McLaren", cursive;
-    font-weight: 700;
-    cursor: pointer;
-    color: #fff;
-}
-
-
-/* Footer */
-footer {
-  position: absolute;
-  text-align: center;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-}
-
-footer p {
-  color: #ccc;
 }
